# WF_EOL_TESTER

./: .flake8  .gitignore  .pylintrc  =13.0.0  BUILD_INSTRUCTIONS.md  CLAUDE.md  CLI_USAGE.md  DASHBOARD_README.md  DEPLOYMENT.md  DIO_VERIFICATION_GUIDE.md  ENHANCED_INPUT_GUIDE.md  EOL TESTMODE_V1.01_240417.xlsx  EOL TESTMODE_V1.03_250725.xlsx  GUI_README.md  ICON_USAGE.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_CODE_REVIEW.md  MCU_TIMING_ANALYSIS_REPORT.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE_4_REFACTORING_SUMMARY.md  PHASE_6_IMPLEMENTATION_SUMMARY.md  PHASE_7_VALIDATION_REPORT.md  POWER_ANALYZER_IMPLEMENTATION_SUMMARY.md  PYLINT_FINAL_QUALITY_REPORT.md  README.md  REFACTORING_SUMMARY_DIGITAL_IO.md  SLASH_COMMANDS_README.md  TESTING_UNIFIED_EXECUTOR.md  UV_MIGRATION.md  WINDOWS_DEPLOYMENT_GUIDE.md  WINDOWS_LAUNCHER_GUIDE.md  WT1800E_COMPLETE_SCPI_Reference.md  WT1800E_Programming_Guide.md  WT1800E_SCPI_Command_Reference.md  axl_function_comparison.md  build_all.bat  build_exe.bat  build_installer.bat  check_config_directory.py  clean_architecture_design.md  (+71 more)
.claude/: settings.json  settings.json.backup  settings.local.json
.claude/agents/: api-designer.md  architect.md  code-reviewer.md  debugger.md  pyside-ui-agent.md  readability-enhancer.md  refactor-assistant.md  technical-writer.md  test-runner.md
.docs/tcp-ip-protocol/: 01-tcp-protocol.md  02-json-schema.md  03-file-integration.md  04-error-handling.md  05-examples-start-complete.md  05-examples.md  README.md
.taskmaster/: config.json  state.json
ResultsLog/: DEFAULT001_20250903_160827_001.json  DEFAULT001_20250903_164022_001.json
TestResults/: test_summary.csv
TestResults/raw_data/: DEFAULT001_20250810_030222_raw.csv  DEFAULT001_20250810_030741_raw.csv  DEFAULT001_20250810_031726_raw.csv
config/: README.md
config/test_profiles/: comprehensive.yaml  default.yaml  high_voltage.yaml  quick_test.yaml  safety_test.yaml
configuration/: cli_commands.yaml  dut_defaults.yaml  dut_defaults.yaml.template  hardware.yaml  hardware_configuration.yaml  hardware_configuration.yaml.template  hardware_model.yaml  hardware_model.yaml.template  heating_cooling_time_test.yaml  last_used_profile.json  robot_params.mot
configuration - 복사본/: application.yaml  dut_defaults.yaml  hardware_config.yaml  profile.yaml
configuration - 복사본/test_profiles/: default.yaml
configuration/test_profiles/: default.yaml  default.yaml.template  test_auto.yaml  test_auto.yaml.template
examples/: enhanced_command_system_usage.py
mcu_communication_test/: README.md  current_code_test.py  fast_lma_mcu_test.py  mcu_implementation_comparison.py  simple_serial_test.py  timing_comparison.py
scripts/: __init__.py  analyze_db_schema.py  check_version.py  clean_empty_test_results.py  cleanup_orphaned_records.py  delete_raw_measurements.py  delete_test_data.py  format.py  migrate_logs_to_db.py  rebuild_db_from_logs.py  sync_version.py  test_foreign_key.py  update_csv_serials.py  update_json_serials.py  verify_db_data.py
sequences/: __init__.py
sequences/eol_force_test/: README.md  __init__.py  hardware_adapter.py  main.py  manifest.yaml  sequence.py
sequences/eol_force_test/config/: hardware_config.yaml  robot_motion_settings.mot
sequences/eol_force_test/domain/: value_objects.py
sequences/eol_force_test/driver/: __init__.py
sequences/eol_force_test/hardware/: factory.py
sequences/eol_force_test/interfaces/: __init__.py
sequences/eol_force_test/services/: __init__.py  hardware_facade.py
sequences/eol_tester/: __init__.py  __main__.py  hardware_adapter.py  manifest.yaml  pyproject.toml  sequence.py
sequences/eol_tester/config/: __init__.py  hardware_config.yaml
sequences/eol_tester/domain/: __init__.py  enums.py  exceptions.py  value_objects.py
sequences/eol_tester/driver/ajinextek/: axl_wrapper.py  constants.py  error_codes.py  exceptions.py
sequences/eol_tester/driver/serial/: __init__.py  exceptions.py  serial.py
sequences/eol_tester/driver/tcp/: communication.py  constants.py  exceptions.py
sequences/eol_tester/hardware/: __init__.py  factory.py
sequences/eol_tester/hardware/mock/: __init__.py
sequences/eol_tester/hardware/real/: ajinextek_dio.py  ajinextek_robot.py  bs205_loadcell.py  lma_mcu.py  oda_power.py
sequences/eol_tester/interfaces/: __init__.py
sequences/eol_tester/services/: hardware_facade.py
src/: main.py  main_cli.py  main_gui.py
src/application/: __init__.py
src/application/containers/: __init__.py  application_container.py  configuration_container.py  connection_container.py  core_services_container.py  hardware_container.py  persistence_container.py  (+4 more)
src/configuration/: application.yaml  dut_defaults.yaml  hardware_config.yaml  heating_cooling_time_test.yaml  profile.yaml
src/domain/: __init__.py
src/driver/: __init__.py
src/hardware/: factory.py
src/infrastructure/: __init__.py  factory.py
src/utils/: __init__.py  platform_detection.py  system_checker.py  version.py
src/wf_eol_tester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src_old_backup/: main.py
src_old_backup/application/: __init__.py
src_old_backup/domain/: __init__.py
src_old_backup/integration/: __init__.py  application_factory.py  dependency_injection.py
src_old_backup/presentation/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_mock_power_analyzer.py  test_power_analyzer_config.py  test_wt1800e_error_handling.py
tests/integration/: README.md  test_mock_power_integration.py  test_robot_integration.py  test_wt1806_integration_basic.py  test_wt1806_integration_cycle.py  test_wt1806_production_integration.py
tests/legacy/: README.md  test_wt1800e_command_test.py  test_wt1800e_usb_fetch.py  test_wt1800e_usb_final.py  test_wt1800e_usb_improved.py  test_wt1800e_usb_minimal.py  test_wt1800e_usb_numeric.py  test_wt1800e_usb_simple.py  test_wt1800e_usb_termination.py  test_wt1806_usb_success.py
tests/utils/: README.md  test_visa_usb_connection.py  test_wt1806_error_command.py  test_wt1806_reset.py
tools/: dio_verification_tool.py
ui_files/: eol_test_panel.ui
(+933 files in other folders)
