[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wf-eol-tester"
version = "0.1.0"
description = "End-of-Line (EOL) Tester for Wafer Fabrication with Clean Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.6.0",
    "asyncio-mqtt>=0.11.0",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.38",
    # FastAPI web server dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "python-multipart>=0.0.6",
    # Additional web dependencies
    "jinja2>=3.1.0",
    "httpx>=0.24.0",
    "websockets>=11.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=4.0.0",
    "pylint>=2.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
# Core formatting settings
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

# Professional formatting options
skip-string-normalization = false
skip-magic-trailing-comma = false
preview = true
enable-unstable-features = []

# String handling and quotes
string-normalization = true
experimental-string-processing = true

# Advanced formatting features
force-exclude = '''
/(
  # Build directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | venv
  | env
  | ENV
  | env.bak
  | venv.bak
  | build
  | dist
  | \.build
  | \.dist-info
  | \.egg-info

  # Generated files
  | migrations
  | _pb2\.py
  | _pb2_grpc\.py

  # Test coverage and reports
  | htmlcov
  | \.coverage
  | coverage\.xml
  | \.pytest_cache

  # IDE and editor directories
  | \.vscode
  | \.idea
  | \.sublime-*
)/
'''

[tool.isort]
# Black compatibility
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Source code organization
src_paths = ["src", "tests", "scripts"]
skip = ["__pycache__", ".git", ".mypy_cache", ".pytest_cache", "build", "dist"]

# Import classification for clean architecture
known_first_party = [
    "application",
    "domain",
    "infrastructure",
    "ui",
    "driver"
]
known_third_party = [
    "loguru",
    "asyncio",
    "numpy",
    "scipy",
    "yaml",
    "pytest",
    "mypy",
    "serial",
    "mqtt"
]

# Professional import organization
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

# Advanced sorting and formatting
force_alphabetical_sort_within_sections = true
combine_as_imports = true
split_on_trailing_comma = true
force_single_line = false
single_line_exclusions = []
order_by_type = true
atomic = true
lines_after_imports = 2
lines_between_types = 1

# Comment preservation and handling
comment_prefix = "  #"
honor_noqa = true

# Import length management
wrap_length = 100
balanced_wrapping = true
auto_identify_namespace_packages = true

# Force import structure consistency
force_adds = false
force_sort_within_sections = true
show_diff = false
verbose = false

# Skip files that should not be processed
skip_glob = [
    "**/migrations/*",
    "**/*_pb2.py",
    "**/*_pb2_grpc.py"
]

# Format for different import types
import_heading_future = "Future imports"
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third-party imports"
import_heading_firstparty = "Local application imports"
import_heading_localfolder = "Local folder imports"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.mypy]
# Python environment
python_version = "3.10"
mypy_path = "src"

# Essential checks only - minimal configuration for bug detection
strict = false
check_untyped_defs = true
warn_unused_configs = true
ignore_missing_imports = true

# Error reporting
show_error_codes = true
show_column_numbers = true
pretty = true

# Performance and caching
cache_dir = ".mypy_cache"
incremental = true

# Minimal per-module configuration
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "conftest",
    "setup"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "loguru.*",
    "serial.*",
    "asyncio_mqtt.*",
    "numpy.*",
    "scipy.*",
    "yaml.*"
]
ignore_missing_imports = true

[tool.pylint.main]
init-hook = 'import sys; sys.path.append("src")'
jobs = 0
persistent = true
fail-under = 6.0

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring", 
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "import-outside-toplevel",
    "broad-except",
    "unused-argument",
    "consider-using-from-import",
    "line-too-long",
    "duplicate-code",
    "unnecessary-ellipsis",
    "invalid-name",
    "consider-using-enumerate",
    "consider-using-dict-comprehension",
    "consider-using-set-comprehension",
    "consider-using-ternary",
    "consider-using-with",
    "consider-iterating-dictionary",
    "consider-using-f-string",
    "consider-using-in",
    "consider-using-get",
    "consider-using-max-builtin",
    "consider-using-min-builtin",
    "use-implicit-booleaness-not-comparison",
    "simplifiable-if-statement",
    "simplifiable-if-expression",
    "no-else-return",
    "no-else-raise",
    "no-else-break",
    "no-else-continue",
]

[tool.pylint.format]
max-line-length = 100
indent-string = "    "

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db", "ui", "e"]

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-locals = 15
max-statements = 50
max-public-methods = 20

[tool.pylint.logging]
logging-modules = ["loguru"]

[tool.pylint.variables]
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"

[tool.flake8]
max-line-length = 100
max-complexity = 10
select = ["E", "W", "F", "C"]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator (prefer W504)
    "E226",  # missing whitespace around arithmetic operator
    "E24",   # multiple spaces after ','
]
extend-ignore = ["E203", "E501", "W503", "E226", "E24"]
per-file-ignores = [
    "__init__.py:F401,F403",
    "tests/*:F401,F811,E402,S101,S106",
    "**/test_*.py:F401,F811,E402,S101,S106",
    "**/mock/*:F401,F811,W0613",
    "setup.py:E402",
    "conftest.py:F401,F811",
]
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".tox",
    ".mypy_cache",
    "node_modules",
    "migrations",
    ".coverage",
    "htmlcov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pylint>=3.3.7",
]
